# 2026GKD_Software_Test

./: README  README.md
src/: CMakeLists.txt  sensortaskbase-test.cpp  sensortaskbase.h  taskfilter.cpp  taskfilter.h
